# anu-timetable-generator

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  build.rs  index.html  rustfmt.toml
.github/workflows/: gh-pages-deploy.yml
src/: app.rs  main.rs  search.rs  timetable.rs
