[package]
name = "anu-timetable-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo = { version = "0.11.0", default-features = false, features = ["net"] }
leptos = { version = "0.7.5", features = ["csr", "nightly"] }
postcard = { version = "1.1.1", features = ["alloc"] }
serde = { version = "1.0.217", features = ["derive"] }

[build-dependencies]
postcard = { version = "1.1.1", features = ["alloc"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
